<resources>
    <string name="app_name">familybiz</string>
    <string name="add_family">Create a family</string>
    <string name="join_family">Join a family</string>
    <string name="home_wait_join">Pending join</string>
    <string name="familyManager">Family management</string>
    <string name="familyname">Family name</string>
    <string name="room_manager">Room management</string>
    <string name="family_member">Family members</string>
    <string name="familyrole_manager">Administrator</string>
    <string name="family_remove">Delete the family</string>
    <string name="family_leave">Leave the family</string>
    <string name="add_member">Add members via account</string>
    <string name="invaition_member">Add members via invitation code</string>
    <string name="_room">%d rooms</string>
    <string name="family_invitation_invalid">Invitation expired</string>
    <string name="familyrole_owner">Family owner</string>
    <string name="family_member_time_remain_hours">%d hours remaining in the validity period</string>
    <string name="family_member_time_remain_days">%d days remaining in the validity period</string>
    <string name="family_can_not_delete_tip">There are still other members, so you cannot delete. Please transfer family permissions and then leave the family.</string>
    <string name="member_can_not_delete_tip">No permission</string>
    <string name="room">Room name</string>
    <string name="out_room_device">Devices not in this room</string>
    <string name="thing_will_remove">Will be removed from %s location</string>
    <string name="confirmation_delete_tip">Delete confirmation</string>
    <string name="confirmation_delete_room_desc">Are you sure you want to delete this room？</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add_room_hint">Please enter the room name</string>
    <string name="add_room_title">Add Room</string>
    <string name="confirm_save">Confirm save</string>
    <string name="confirm_save_desc_sortroom">Are you sure you want to save the room data after reordering?</string>
    <string name="confirm_save_desc_sortroomindev">Are you sure you want to save the data after reordering?</string>
    <string name="confirmation_delete_desc_removeinroom">Are you sure you want to remove this device from this room?</string>
    <string name="update_room_name_tip">Update Room Name</string>
    <string name="confirm_delete_member">Delete Member?</string>
    <string name="add_family_name_hint">Please enter the family name</string>
    <string name="update_family">Update Family</string>
    <string name="update_member">Update Member</string>
    <string name="add_member_name_hint">Please enter the member\'s name</string>
    <string name="add_member_account_hint">Please enter the member\'s account</string>
    <string name="confirmation_invatation_tip">Do you accept the invitation?</string>
    <string name="current_family_delete_tip">Family has been deleted</string>
    <string name="confirm_join_family">Join Family</string>
    <string name="join_family_hint">Please enter the invitation code </string>
</resources>